# LangLock

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  langlock.manifest  langlock.rc
.github/workflows/: release.yml
installer/: langlock.iss
src/: config.rs  hook.rs  ipc.rs  main.rs  notification.rs  startup.rs  tray.rs
