[package]
name = "langlock"
version = "1.1.2"
edition = "2021"
authors = ["LangLock Contributors"]
description = "A lightweight Windows utility that intercepts Caps Lock to switch input language without keystroke emulation"
license = "MIT"
repository = "https://github.com/risenxxx/LangLock"
readme = "README.md"
keywords = ["windows", "keyboard", "language", "caps-lock", "input-method"]
categories = ["os::windows-apis"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
tray-icon = "0.19"
muda = "0.15"
winrt-notification = "0.5"
once_cell = "1.19"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
